--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             >
             <a href="/contact.html"> <button class="btn">Contact Me</button></a>
           </div>
-          <div class="devpic"><img src="/dev.PNG" alt="Shreyas surve" /></div>
+          <div class="devpic"><img src="dev.PNG" alt="Shreyas surve" /></div>
         </div>
       </div>
     </div>
