--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li><a href=""> Home</a></li>
             <li><a href="intro.html"> My Intro</a></li>
             <li><a href="services.html"> Services</a></li>
-            <li><a href="cv.html"> Cv</a></li>
+            <li><a href="CV.html"> Cv</a></li>
             <li><a href="contact.html"> Contact Me</a></li>
           </ul>
         </nav>
