--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               love to visit forts and new places
             </div>
             <dev class="buttons"></dev>
-            <a href="/cv.txt" target="_blank">
+            <a href="cv.txt" target="_blank">
               <button class="btn">download CV</button></a
             >
             <a href="/contact.html"> <button class="btn">Contact Me</button></a>
