--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a href="cv.txt" target="_blank">
               <button class="btn">download CV</button></a
             >
-            <a href="/contact.html"> <button class="btn">Contact Me</button></a>
+            <a href="contact.html"> <button class="btn">Contact Me</button></a>
           </div>
           <div class="devpic"><img src="dev.png" alt="Shreyas surve" /></div>
         </div>
